--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "react-colorful",
-  "version": "5.6.1",
-  "description": "🎨 A tiny (2,8 KB) color picker component for React and Preact apps. Fast, well-tested, dependency-free, mobile-friendly and accessible",
+  "name": "@armincerf/react-colorful",
+  "repository": "armincerf/react-colorful",
+  "version": "1.0.7",
+  "description": "Fork of react-colorful with action buttons and toggles",
   "source": "src/index.ts",
   "main": "dist/index.js",
   "module": "dist/index.module.js",
@@ -31,103 +32,7 @@
     "build-demo": "del-cli 'demo/dist/*' && parcel build demo/src/index.html --out-dir demo/dist --public-url https://omgovich.github.io/react-colorful/",
     "deploy-demo": "npm run build-demo && gh-pages -d demo/dist"
   },
-  "size-limit": [
-    {
-      "path": "dist/index.module.js",
-      "name": "HexColorPicker",
-      "import": "{ HexColorPicker }",
-      "limit": "3 KB"
-    },
-    {
-      "path": "dist/index.module.js",
-      "name": "HslColorPicker",
-      "import": "{ HslColorPicker }",
-      "limit": "3 KB"
-    },
-    {
-      "path": "dist/index.module.js",
-      "name": "HslaColorPicker",
-      "import": "{ HslaColorPicker }",
-      "limit": "3 KB"
-    },
-    {
-      "path": "dist/index.module.js",
-      "name": "HslStringColorPicker",
-      "import": "{ HslStringColorPicker }",
-      "limit": "3 KB"
-    },
-    {
-      "path": "dist/index.module.js",
-      "name": "HslaStringColorPicker",
-      "import": "{ HslaStringColorPicker }",
-      "limit": "3 KB"
-    },
-    {
-      "path": "dist/index.module.js",
-      "name": "HsvColorPicker",
-      "import": "{ HsvColorPicker }",
-      "limit": "3 KB"
-    },
-    {
-      "path": "dist/index.module.js",
-      "name": "HsvaColorPicker",
-      "import": "{ HsvaColorPicker }",
-      "limit": "3 KB"
-    },
-    {
-      "path": "dist/index.module.js",
-      "name": "HsvStringColorPicker",
-      "import": "{ HsvStringColorPicker }",
-      "limit": "3 KB"
-    },
-    {
-      "path": "dist/index.module.js",
-      "name": "HsvaStringColorPicker",
-      "import": "{ HsvaStringColorPicker }",
-      "limit": "3 KB"
-    },
-    {
-      "path": "dist/index.module.js",
-      "name": "RgbColorPicker",
-      "import": "{ RgbColorPicker }",
-      "limit": "3 KB"
-    },
-    {
-      "path": "dist/index.module.js",
-      "name": "RgbaColorPicker",
-      "import": "{ RgbaColorPicker }",
-      "limit": "3 KB"
-    },
-    {
-      "path": "dist/index.module.js",
-      "name": "RgbStringColorPicker",
-      "import": "{ RgbStringColorPicker }",
-      "limit": "3 KB"
-    },
-    {
-      "path": "dist/index.module.js",
-      "name": "RgbaStringColorPicker",
-      "import": "{ RgbaStringColorPicker }",
-      "limit": "3.1 KB"
-    },
-    {
-      "path": "dist/index.module.js",
-      "name": "HexColorInput",
-      "import": "{ HexColorInput }",
-      "limit": "3 KB"
-    }
-  ],
   "sideEffects": false,
-  "jest": {
-    "verbose": true,
-    "transform": {
-      "\\.js$": "jest-esm-jsx-transform",
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "moduleNameMapper": {
-      "\\.css$": "<rootDir>/tests/__mocks__/styles.css.mock.ts"
-    }
-  },
   "files": [
     "dist/*.{js,mjs,ts,map}",
     "dist/components/*.ts",
@@ -137,7 +42,6 @@
     "README.md",
     "package.json"
   ],
-  "repository": "omgovich/react-colorful",
   "keywords": [
     "react",
     "color picker",
@@ -157,10 +61,6 @@
   ],
   "author": "Vlad Shilov <omgovich@ya.ru>",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/omgovich/react-colorful/issues"
-  },
-  "homepage": "https://omgovich.github.io/react-colorful",
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
@@ -195,6 +95,7 @@
     "size-limit": "^4.10.1",
     "ts-jest": "^26.5.3",
     "typescript": "^4.2.3",
-    "use-throttled-effect": "0.0.7"
+    "use-throttled-effect": "0.0.7",
+    "remeda": "^1.9.1"
   }
 }
